# elgato-light

./: Cargo.toml  README.md
.github/workflows/: release.yml  update-homebrew.yml
src/: main.rs
