[package]
name = "elgato-light"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
mdns-sd = "0.18"
